--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="medrawd.is.awesome.morsecodedecoder">
+    package="medrawd.is.awesome.morse">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.APRS">
         <activity
-            android:name=".MainActivity"
+            android:name="medrawd.is.awesome.morse.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.APRS.NoActionBar">
